--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,36 @@ body  {
     justify-content: center;
     align-items: center;
 }
- h1, p{
+ h1, p {
+
+ }
+
+ .container {
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    border: 1px;
+ }
+
+ .form {
+    flex: 1;
+    padding: 1em;
+    margin: 0;
+    border-radius: 0.5rem 0 0 0.5;
+    border: 1px solid;
+    border-right: none;
     
  }
+  
+ .form > button {
+    padding: 0 1em;
+    background-color: rgb(106, 177, 238);
+color: fff;
+font-size: 1em;
+border: 1px solid;
+margin: 0;
+border-radius: 0 0.5rem 0.5rem;
+border: 1px solid #000;
+border-left: none;
+
+}
