--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,24 @@
 
-body  {
-    height: 100%;
-    background-color: #eee;
-    font-family: sans-serif;
-    font-weight: lighter;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* starting the styling */
+h1 {
+    background-color: darkgrey;
+    text-align: center;
 }
- h1, p {
 
- }
+label{
+margin-top: 10px;
+font-weight: bold;
+font-size: 20px;
+}
+.card {
+    margin: 10px;
+}
 
- .container {
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    border: 1px;
- }
+.colOne {
+    background-color: white;
 
- .form {
-    flex: 1;
-    padding: 1em;
-    margin: 0;
-    border-radius: 0.5rem 0 0 0.5;
-    border: 1px solid;
-    border-right: none;
-    
- }
-  
- .form > button {
-    padding: 0 1em;
-    background-color: rgb(106, 177, 238);
-color: fff;
-font-size: 1em;
-border: 1px solid;
-margin: 0;
-border-radius: 0 0.5rem 0.5rem;
-border: 1px solid #000;
-border-left: none;
+}
 
+.colTwo {
+    background-color: rgb(255, 255, 255);
 }
