I put in the functions to save the search history in the storage and in an array

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,32 @@ font-size: 20px;
 .colTwo {
     background-color: rgb(255, 255, 255);
 }
+
+.green {
+    background-color: lightgreen;
+}
+
+.yellow {
+    background: yellow;
+}
+
+.orange {
+    background-color: orange;
+}
+
+.red {
+    background-color: red;
+}
+
+.purple {
+background-color: purple;
+}
+
+.icons {
+    height: 70px;
+    width: 70px;
+}
+
+.cardTodayDate{
+    font-size: 20px;
+}
