--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,68 +1,73 @@
-
 body {
   background-image: url(../css/images/weather\ pic.jpeg);
-  background-size: cover;
+  background-size: contain;
+  
   align-content: center;
   font-family: 'Rubik Pixels';
+
 }
 
 h1 {
-	background-color: hsl(20deg 92.98% 33.53%);
-	text-align: center;
+  background-color: hsl(20deg 92.98% 33.53%);
+  text-align: center;
+  font-family: 'Rubik Pixels';
+
+}
+
+.row {
+  font-weight: bold;
   font-family: 'Rubik Pixels';
 }
+
+.histBtnRow i:hover {
+  background-color: black;
+  
+}
+
 label {
-	margin-top: 10px;
-	font-weight: bold;
-	font-size: 20px;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 20px;
   font-family: 'Rubik Pixels';
 }
+
 .card {
-	margin: 10px;
-  align-content: center;
- 
+  margin: 10px;
+
 }
-.colOne {
-	background-color: white;
-  align-content: center;
-}
-.colTwo {
-	background-color: rgb(255, 255, 255);
-  align-content: center;
-}
+
 .histBtnRow {
-	margin-top: 5px;
-	margin-bottom: 5px;
-  align-content: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
-.green{
+
+.green {
   background-color: lightgreen;
 }
-.yellow{
+
+.yellow {
   background-color: yellow;
 }
-.orange{
+
+.orange {
   background-color: orange;
 }
-.red{
+
+.red {
   background-color: red;
 }
-.purple{
+
+.purple {
   background-color: purple;
 }
+
 .icons {
-	height: 70px;
-	width: 70px;
+  height: 70px;
+  width: 70px;
   align-content: center;
 }
+
 .cardTodayDate {
-	font-size: 20px;
-  align-content: center;
+  font-size: 20px;
+
 }
-
-.row-fiveForecast{
-  display: flex;
-  justify-content: space-around;
-}
-
-
